<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>edrivingkit_pkg</name>
  <version>0.0.0</version>
  <description>Copyright 2025 ADUS INC., all rights reserved.</description>
  <maintainer email="hoonje.woo@adus.ai">hoonje.woo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rosidl_default_generators</depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
